fix: ebook container vertical alignment

--- a/src/components/book-card/z-book-card/styles.css
+++ b/src/components/book-card/z-book-card/styles.css
@@ -259,6 +259,6 @@
 }
 
 :host > article.landscape .main-content .card-info .ebook-container .ebook {
-  height: 62px;
+  height: 60px;
   padding: var(--space-unit);
 }
